pxc/tests/test_194_ephemeral/eph7.px

public namespace eph7;
import core::common -;

pure struct foo(slice{int} x0) {
  public slice{int} x = x0; // error: 
}

function slice{int} test_ephemeral_escape(int x)
{
  varray{int} a;
  a.push_back(x);
  foo fv = foo(a);
  println(fv);
  return slice{int}();
  // return fv.x; // error: returning invalid ephemeral value
}

{
  test_ephemeral_escape(3);
}
